--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
   </head>
   <body>
     <img src="ImagenesGit/header.jpg" alt="">
+    <img src="ImagenesGit/hero.jpg" alt="">
   </body>
 </html>
