--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
   <body>
     <img src="ImagenesGit/header.jpg" alt="">
     <img src="ImagenesGit/hero.jpg" alt="">
+    <img src="ImagenesGit/acustica.jpg" alt="">
   </body>
 </html>
