nueva version de invi verde

--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
     </style>
   </head>
   <body>
-    <img src="ImagenesGit/header.jpg" alt="">
-    <img src="ImagenesGit/hero.jpg" alt="">
-    <img src="ImagenesGit/acustica.jpg" alt="">
+    <img src="ImagenesGit/nueva-version.jpg" alt="">
   </body>
 </html>
