--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <style media="screen">
       body{
         margin: 0;
-        border: 10px solid red;
       }
       img{
         max-width: 100%;
@@ -25,6 +24,8 @@
   </head>
   <body>
     <img src="ImagenesGit/invie-responsive.png" alt="" id="responsive">
-    <img src="ImagenesGit/nueva-version.jpg" alt="">
+    <img src="ImagenesGit/header.jpg" alt="">
+    <img src="ImagenesGit/hero.jpg" alt="">
+    <img src="ImagenesGit/acustica.jpg" alt="">
   </body>
 </html>
